--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Study Planner</title>
     <link rel="stylesheet" href="style.css">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0"> // Add viewport meta element
+    <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- Add viewport meta element -->
     <title>Document</title>
 </head>
 <body>
@@ -67,7 +67,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0"> // Add viewport meta element
+    <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- Add viewport meta element -->
     <title>Document</title>
 </head>
 <body>
